--- a/03/index.html
+++ b/03/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="initial-scale=1,maximum-scale=1,user-scalable=no"
     />
-    <title>Create a FeatureLayer with client side graphics</title>
+    <title>Using Arcade expressions to visualize correctly data</title>
 
     <style>
       html,
